--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -13,8 +13,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install & build
-        run: npm i && npm run build
+      - name: Install
+        run: npm i
+      
+      - name: Test
+        run: npm test
+
+      - name: Build
+        run: npm run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
