add test 2do Parcial de Ing de Sw - 2023

--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install
         run: npm i
       
-      - name: Test
+      - name: Test Titulo
         run: npm test
 
       - name: Build
