--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-pipeline",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "test": "jest",
     "predeploy": "npm run build",
@@ -12,19 +12,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "jest": "^29.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-router-dev": "^1.0.0",
     "react-router-dom": "^6.12.1",
+    "react-scripts": "^5.0.1",
     "test": "^3.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "babel-jest": "^29.5.0",
+    "chai": "^4.3.7",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
     "gh-pages": "^4.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
-  }
+  },
+  "description": "[Go to video](https://www.youtube.com/watch?v=e3SV6tYztz0)",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
