--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -13,11 +13,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install
-        run: npm install --legacy-peer-deps
-      
-      - name: Update Dependencies
-        run: npm update
+      - name: Set Node.js 16.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+
+      - name: Install Dependencies
+        run: npm ci
 
       - name: Test
         run: npm test
