--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -13,22 +13,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set Node.js 16.x
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16.x
-
       - name: Install Dependencies
         run: npm ci
-
+      
       - name: Test
         run: npm test
 
       - name: Build
         run: npm run build
 
-      - name: Deploy
+      - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
           branch: gh-pages
           folder: dist
+
