--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@cfaester/enzyme-adapter-react-18": "^0.7.0",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -30,7 +31,6 @@
     "babel-jest": "^29.5.0",
     "chai": "^4.3.7",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.7",
     "gh-pages": "^4.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
